--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tasklist?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+#Show all queries. It is better to DISABLE in production due to performance reduce
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
